[package]
name = "lay"
version = "0.1.0"
authors = ["Romain TRUCHI <romain.truchi.06@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["styler-ops"]
styler-ops = []

[dev-dependencies]
crossterm = "0.17"
pretty_assertions = "0.6"
