[package]
name = "lay"
version = "0.1.0"
authors = ["Romain TRUCHI <romain.truchi.06@gmail.com>"]
edition = "2018"
build = "build/mod.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
styler-idx = []
styler-ops = []

[dependencies]
pretty_assertions = "0.6"

[dev-dependencies]
crossterm = "0.17"
pretty_assertions = "0.6"

[build-dependencies]
quote = "1.0"
# proc-macro2 = { version = "1.0", default-features = false }
