[package]
name = "lay"
version = "0.1.0"
authors = ["Romain TRUCHI <romain.truchi.06@gmail.com>"]
edition = "2018"
build = "build/mod.rs"

[features]
default = ["backend-crossterm"]
backend-crossterm = ["crossterm"]
full = ["styler-idx", "styler-ops"]
styler-idx = []
styler-ops = []

[dependencies]
crossterm = { version = "0.17", optional = true }

[dev-dependencies]
crossterm = "0.17"
pretty_assertions = "0.6"

[build-dependencies]
quote = "1.0"
proc-macro2 = { version = "1.0", default-features = false }
